--- a/.gitignore
+++ b/.gitignore
@@ -18,10 +18,11 @@ coverage
 
 # node-waf configuration
 .lock-wscript
-
+/.idea
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
 
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
+config.json
