--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -10,7 +10,8 @@
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
-    "restangular": "~1.5.1"
+    "restangular": "~1.5.1",
+    "font-awesome": "~4.3.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
