--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -11,7 +11,9 @@
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
     "restangular": "~1.5.1",
-    "font-awesome": "~4.3.0"
+    "font-awesome": "~4.3.0",
+    "firebase": "~2.2.7",
+    "angularfire": "~1.1.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
