--- a/twitter/package.json
+++ b/twitter/package.json
@@ -22,13 +22,14 @@
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
+    "natural": "^0.2.1",
+    "pos": "^0.2.0",
     "rc": "~0.5.0",
     "sails": "~0.11.0",
     "sails-disk": "~0.10.0",
     "sails-mongo": "^0.11.2",
     "sentiment": "^1.0.2",
-    "twitter": "^1.2.5",
-    "natural": "^0.2.1"
+    "twitter": "^1.2.5"
   },
   "scripts": {
     "debug": "node debug app.js",
