--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -13,7 +13,8 @@
     "restangular": "~1.5.1",
     "font-awesome": "~4.3.0",
     "firebase": "~2.2.7",
-    "angularfire": "~1.1.2"
+    "angularfire": "~1.1.2",
+    "angular-loading-bar": "~0.8.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
