--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -14,7 +14,8 @@
     "font-awesome": "~4.3.0",
     "firebase": "~2.2.7",
     "angularfire": "~1.1.2",
-    "angular-loading-bar": "~0.8.0"
+    "angular-loading-bar": "~0.8.0",
+    "angularjs-toaster": "~0.4.15"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
