--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -2,18 +2,18 @@
   "name": "twitter-app",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "^1.3.0",
+    "angular": "^1.4.0",
     "bootstrap": "^3.2.0",
-    "angular-animate": "^1.3.0",
-    "angular-cookies": "^1.3.0",
-    "angular-resource": "^1.3.0",
-    "angular-route": "^1.3.0",
-    "angular-sanitize": "^1.3.0",
-    "angular-touch": "^1.3.0",
+    "angular-animate": "^1.4.0",
+    "angular-cookies": "^1.4.0",
+    "angular-resource": "^1.4.0",
+    "angular-route": "^1.4.0",
+    "angular-sanitize": "^1.4.0",
+    "angular-touch": "^1.4.0",
     "restangular": "~1.5.1",
     "font-awesome": "~4.3.0",
     "firebase": "~2.2.7",
-    "angularfire": "~1.1.2",
+    "angularfire": "1.1.2",
     "angular-loading-bar": "~0.8.0",
     "angularjs-toaster": "~0.4.15"
   },
