--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -10,12 +10,12 @@
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
-    "restangular": "~1.5.1",
-    "font-awesome": "~4.3.0",
-    "firebase": "~2.2.7",
-    "angularfire": "1.1.2",
-    "angular-loading-bar": "~0.8.0",
-    "angularjs-toaster": "~0.4.15"
+    "restangular": "^1.5.1",
+    "font-awesome": "^4.3.0",
+    "firebase": "^3.6.6",
+    "angularfire": "^2.3.0",
+    "angular-loading-bar": "^0.8.0",
+    "angularjs-toaster": "^0.4.15"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
@@ -30,5 +30,9 @@
         "dist/js/bootstrap.js"
       ]
     }
+  },
+  "resolutions": {
+    "angular": "1.6.4",
+    "firebase": "^3.6.6"
   }
 }
