--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -2,20 +2,20 @@
   "name": "twitter-app",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "^1.4.0",
-    "bootstrap": "^3.2.0",
-    "angular-animate": "^1.4.0",
-    "angular-cookies": "^1.4.0",
-    "angular-resource": "^1.4.0",
-    "angular-route": "^1.4.0",
-    "angular-sanitize": "^1.4.0",
-    "angular-touch": "^1.4.0",
-    "restangular": "^1.5.1",
-    "font-awesome": "^4.3.0",
-    "firebase": "^3.6.6",
+    "angular": "^1.7.8",
+    "bootstrap": "^3.4.1",
+    "angular-animate": "^1.7.8",
+    "angular-cookies": "^1.7.8",
+    "angular-resource": "^1.7.8",
+    "angular-route": "^1.7.8",
+    "angular-sanitize": "^1.7.8",
+    "angular-touch": "^1.7.8",
+    "restangular": "^1.6.1",
+    "font-awesome": "^5.11.2",
+    "firebase": "^7.2.1",
     "angularfire": "^2.3.0",
-    "angular-loading-bar": "^0.8.0",
-    "angularjs-toaster": "^0.4.15"
+    "angular-loading-bar": "^0.9.0",
+    "angularjs-toaster": "^3.0.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
@@ -32,7 +32,7 @@
     }
   },
   "resolutions": {
-    "angular": "1.6.4",
-    "firebase": "^3.6.6"
+    "angular": "^1.7.8",
+    "firebase": "3.x.x"
   }
 }
