--- a/twitter/package.json
+++ b/twitter/package.json
@@ -26,7 +26,7 @@
     "natural": "^0.6.3",
     "pos": "^0.4.2",
     "rc": "~1.2.8",
-    "sails": "~0.12.14",
+    "sails": "0.12.14",
     "sails-disk": "~1.1.2",
     "sails-mongo": "^0.12.3",
     "sentiment": "^5.0.2",
